feat: 适配 Spring boot 4.x